# Hyper-Personalized-DA-Auto-Generation-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/da_agent/: __init__.py  __main__.py  config.py  pipeline.py
src/da_agent/agents/: __init__.py  architect.py  evaluator.py  generator.py  layout_analyzer.py
src/da_agent/agents/extractor/: __init__.py  copy_style.py  image_style.py  layout_style.py
src/da_agent/models/: __init__.py  ad_layout.py  blueprint.py  evaluation.py  style_dna.py
src/da_agent/utils/: http_client.py  image_utils.py
src/da_agent/utils/prompt_templates/: architect.txt  evaluator.txt  layout_analyzer.txt
src/da_agent/utils/prompt_templates/extractor/: copy_style.txt  image_style.txt  layout_style.txt
tests/: test_evaluator.py  test_extractor.py  test_pipeline.py
